Fix accesibility issues

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <img class="snapshoot desktop" src="./images/Snapshootdsktp1.png" alt="background image for desktop">
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title mobile">Tonic</div>
-                    <div class="projec_title desktop">Tonic</div>
+                    <h2 class="projec_title mobile">Tonic</h2>
+                    <h2 class="projec_title desktop">Tonic</h2>
                         <div class="frame">
                             <div class="client">CANOPY</div>
                             <img class="counter" src="./images/Counter.png" alt="work role">
@@ -101,7 +101,7 @@
                 <img class="snapshoot desktop" src="images/Snapshootdsktp2.png" alt=" background image">
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title ">Multi-Post Stories</div>
+                    <h2 class="projec_title ">Multi-Post Stories</h2>
                         <div class="frame">
                             <div class="client mobile">CANOPY</div>
                             <div class="client desktop">FACEBOOK</div>
@@ -134,8 +134,8 @@
                 <img class="snapshoot desktop" src="./images/Snapshootdsktp3.png" alt=" card image">
             <div class="left_block">
                 <div class="left_block_title">
-                    <div class="projec_title mobile">Tonic</div>
-                    <div class="projec_title desktop">Facebook 360</div>
+                    <h2 class="projec_title mobile">Tonic</h2>
+                    <h2 class="projec_title desktop">Facebook 360</h2>
                     <div class="frame">
                         <div class="client mobile">CANOPY</div>
                         <div class="client desktop">FACEBOOK</div>
@@ -167,8 +167,8 @@
                 <img class="snapshoot desktop" src="images/Snapshootdsktp4.png" alt="card image">
             <div class="left_block">
                 <div class="left_block_title">
-                    <h1 class="projec_title mobile">Multi-Post Stories</h1>
-                    <h1 class="projec_title desktop">Uber Navigation</h1>
+                    <h2 class="projec_title mobile">Multi-Post Stories</h2>
+                    <h2 class="projec_title desktop">Uber Navigation</h2>
                     <div class="frame">
                         <div class="client mobile">CANOPY</div>
                         <div class="client desktop">Uber</div>
@@ -202,11 +202,11 @@
     <!-- about myself -->
     <section id="about_section"class="about_myself">
         <div class="top">
-            <h1>About<br> Myself</h1>
+            <h2>About<br> Myself</h2>
             <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of
                 my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
                 contact me.</p>
-            <h1 id="lets_connect">LET'S CONNECT</h1>
+            <h2 id="lets_connect">LET'S CONNECT</h2>
             <ul class="links">
                 <li>
                     <a href="#"aria-label="Go to my twitter account">
@@ -243,7 +243,7 @@
             <ul>
                 <li>
                     <div class="frame">
-                        <h4>Languages</h4> <img class="arrow" src="./images/Disabled.png" alt="">
+                        <h3>Languages</h3> <img class="arrow" src="./images/Disabled.png" alt="">
                     </div>
                     <ul class="language_wrapper">
                         <li class="language"><img src="./images/Ellipse_js.png" alt="">JavaScript</li>
@@ -254,13 +254,13 @@
                 <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
                 <li>
                     <div class="frame">
-                        <h4>Frameworks</h4> <img class="arrow" src="./images/right.png" alt="">
+                        <h3>Frameworks</h3> <img class="arrow" src="./images/right.png" alt="">
                     </div>
                 </li>
                 <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
                 <li>
                     <div class="frame">
-                        <h4>Skills</h4><img class="arrow" src="./images/right.png" alt="">
+                        <h3>Skills</h3><img class="arrow" src="./images/right.png" alt="">
                     </div>
                 </li>
             </ul>
