--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is my portfolio website.">
     <title>Zewdie's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./images/cropped-ZD-icon.png">
 </head>
 
