update the url to home link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="./index.html"><img src="./images/cropped-ZD-icon.png" alt="Logo"></a>
+        <a href="./"><img src="./images/cropped-ZD-icon.png" alt="Logo"></a>
         <nav>
             <span><a href="#"><img src="images/Union.png" alt="mobile navigation"></a></span>
             <ul>
