Use <hr> as a separator instead of img in the skills sections

--- a/index.html
+++ b/index.html
@@ -246,21 +246,21 @@
                         <h3>Languages</h3> <img class="arrow" src="./images/Disabled.png" alt="">
                     </div>
                     <ul class="language_wrapper">
-                        <li class="language"><img src="./images/Ellipse_js.png" alt="">JavaScript</li>
-                        <li class="language"><img src="./images/Ellipse_html.png" alt="">HTML</li>
-                        <li class="language"><img src="./images/Ellipse_css.png" alt="">CSS</li>
+                        <li class="language"><img src="./images/Ellipse_js.png" alt="JavaScript icon">JavaScript</li>
+                        <li class="language"><img src="./images/Ellipse_html.png" alt="HTML Icon">HTML</li>
+                        <li class="language"><img src="./images/Ellipse_css.png" alt="CSS icon">CSS</li>
                     </ul>
                 </li>
-                <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
+                <li><hr/></li>
                 <li>
                     <div class="frame">
-                        <h3>Frameworks</h3> <img class="arrow" src="./images/right.png" alt="">
+                        <h3>Frameworks</h3> <img class="arrow" src="./images/right.png" alt="rigt pointing arrow">
                     </div>
                 </li>
-                <li><img class="separator" img src="./images/Separator Bottom.png" alt=""></li>
+                <li><hr/></li>
                 <li>
                     <div class="frame">
-                        <h3>Skills</h3><img class="arrow" src="./images/right.png" alt="">
+                        <h3>Skills</h3><img class="arrow" src="./images/right.png" alt="right pointing arrow">
                     </div>
                 </li>
             </ul>
