--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
 </head>
 
 <body>
+
+    <div class="menu hidden">
+        <a id='close-menu'href="javascript:void(0)">
+            &times;
+        </a>
+        <div class="menu-content">
+            <a href="#portfolio_section">Portfolio</a>
+            <a href="#about_section">About</a>
+            <a href="#contact_section">Contact</a>
+        </div>
+    </div>
     <header>
         <a href="./"><img src="./images/cropped-ZD-icon.png" alt="Logo"></a>
         <nav>
-            <span><a href="#"><img src="images/Union.png" alt="mobile navigation"></a></span>
+            <img id="mobile-menu" src="images/Union.png" alt="mobile navigation">
             <ul>
                 <li><a href="#portfolio_section">Portfolio</a></li>
                 <li><a href="#about_section">About</a></li>
@@ -292,6 +303,7 @@
         </div>
     </section>
     <!-- end of contact form -->
+    <script src="./js/portfolio.js"></script>
 </body>
 
 </html>
