Add ESLint to project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <div class="menu hidden">
         <a id='close-menu'href="javascript:void(0)">
             &times;
@@ -29,6 +28,7 @@
         <nav>
             <img id="mobile-menu" src="images/Union.png" alt="mobile navigation">
             <ul>
+                <li><a class = "active" href="#headline">Welcome</a></li>
                 <li><a href="#portfolio_section">Portfolio</a></li>
                 <li><a href="#about_section">About</a></li>
                 <li><a href="#contact_section">Contact</a></li>
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <!-- headeline -->
-    <section class="headline">
+    <section id="headline"class="headline">
         <div class="main_content">
             <h1 class="username">I’m Zewdie <br>Glad to see you!</h1>
             <p class="introduction">I’m a software developer! I can help you build a product ,
