Implement scrollspy alternative for desktop menu items

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <nav>
             <img id="mobile-menu" src="images/Union.png" alt="mobile navigation">
             <ul>
-                <li><a class = "active" href="#headline">Welcome</a></li>
-                <li><a href="#portfolio_section">Portfolio</a></li>
-                <li><a href="#about_section">About</a></li>
-                <li><a href="#contact_section">Contact</a></li>
+                <li><a class="headline_section" href="#headline_section">Welcome</a></li>
+                <li><a class="portfolio_section" href="#portfolio_section">Portfolio</a></li>
+                <li><a class="about_section" href="#about_section">About</a></li>
+                <li><a class="contact_section" href="#contact_section">Contact</a></li>
             </ul>
         </nav>
     </header>
     <!-- headeline -->
-    <section id="headline"class="headline">
+    <section id="headline_section"class="headline">
         <div class="main_content">
             <h1 class="username">I’m Zewdie <br>Glad to see you!</h1>
             <p class="introduction">I’m a software developer! I can help you build a product ,
