Add Welcome menu-item to mobile menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             &times;
         </a>
         <div class="menu-content">
+            <a href="#headline_section">Welcome</a>
             <a href="#portfolio_section">Portfolio</a>
             <a href="#about_section">About</a>
             <a href="#contact_section">Contact</a>
