Create cards dynamically

--- a/index.html
+++ b/index.html
@@ -82,132 +82,7 @@
 
     <!-- works -->
     <section id="portfolio_section"class="works">
-        <div class="card">
-                <img class="snapshoot mobile" src="./images/Snapshootmbl1.png" alt="background image for mobile">
-                <img class="snapshoot desktop" src="./images/Snapshootdsktp1.png" alt="background image for desktop">
-            <div class="left_block">
-                <div class="left_block_title">
-                    <h2 class="projec_title mobile">Tonic</h2>
-                    <h2 class="projec_title desktop">Tonic</h2>
-                        <div class="frame">
-                            <div class="client">CANOPY</div>
-                            <img class="counter" src="./images/Counter.png" alt="work role">
-                            <div class="role">Back End Dev</div>
-                            <img class="counter" src="./images/Counter.png" alt="work role">
-                            <div class="year">2015</div>
-                        </div>
-                </div>
-                <p>
-                    A daily selection of privately personalized reads; no accounts or sign-ups required.
-                </p>
-                <ul class="tags">
-                    <li>html</li>
-                    <li>css</li>
-                    <li>javaScript</li>
-                </ul>
-                <button type="button" class="action">See Project</button>
-            </div>
-        </div>
-        <div class="card">
-                <img class="snapshoot mobile" src="images/Snapshootmbl2.png" alt=" background image">
-                <img class="snapshoot desktop" src="images/Snapshootdsktp2.png" alt=" background image">
-            <div class="left_block">
-                <div class="left_block_title">
-                    <h2 class="projec_title ">Multi-Post Stories</h2>
-                        <div class="frame">
-                            <div class="client mobile">CANOPY</div>
-                            <div class="client desktop">FACEBOOK</div>
-                            <img class="counter" src="./images/Counter.png" alt="work role">
-                            <div class="role mobile">Back End Dev</div>
-                            <div class="role desktop">Full Stack Dev</div>
-                            <img class="counter" src="./images/Counter.png" alt="work role">
-                            <div class="year">2015</div>
-                    </div>
-                </div>
-                <p class="mobile">
-                    A daily selection of privately personalized reads; no accounts or sign-ups required.
-                </p>
-                <p class="desktop">
-                    Experimental content creation feature that allows users to 
-                    add to an existing story over the course of a day without
-                    spamming their friends.
-                </p>
-                <ul class="tags">
-                    <li>html</li>
-                    <li class="desktop">Ruby on rails</li>
-                    <li>css</li>
-                    <li>javaScript</li>
-                </ul>
-                <button type="button" class="action">See Project</button>
-            </div>
-        </div>
-        <div class="card">
-                <img class="snapshoot mobile" src="./images/Snapshootmbl3.png" alt=" card image">
-                <img class="snapshoot desktop" src="./images/Snapshootdsktp3.png" alt=" card image">
-            <div class="left_block">
-                <div class="left_block_title">
-                    <h2 class="projec_title mobile">Tonic</h2>
-                    <h2 class="projec_title desktop">Facebook 360</h2>
-                    <div class="frame">
-                        <div class="client mobile">CANOPY</div>
-                        <div class="client desktop">FACEBOOK</div>
-                        <img class="counter" src="./images/Counter.png" alt="work role">
-                        <div class="role mobile">Back End Dev</div>
-                        <div class="role desktop">Full Stack Dev</div>
-                        <img class="counter" src="./images/Counter.png" alt="work role">
-                        <div class="year">2015</div>
-                    </div>
-                </div>
-                <p class="mobile">
-                    A daily selection of privately personalized reads; no accounts or sign-ups required.
-                </p>
-                <p class="desktop">
-                    Exploring the future of media in Facaebook's first Virtual Reality app; a place to 
-                    discover and enjoy 360 photos and videos on Gear VR.
-                </p>
-                <ul class="tags">
-                    <li>html</li>
-                    <li class="desktop">Ruby on rails</li>
-                    <li>css</li>
-                    <li>javaScript</li>
-                </ul>
-                <button type="button" class="action">See Project</button>
-            </div>
-        </div>
-        <div class="card">
-                <img class="snapshoot mobile" src="images/Snapshootmbl4.png" alt="card image">
-                <img class="snapshoot desktop" src="images/Snapshootdsktp4.png" alt="card image">
-            <div class="left_block">
-                <div class="left_block_title">
-                    <h2 class="projec_title mobile">Multi-Post Stories</h2>
-                    <h2 class="projec_title desktop">Uber Navigation</h2>
-                    <div class="frame">
-                        <div class="client mobile">CANOPY</div>
-                        <div class="client desktop">Uber</div>
-                        <img class="counter" src="./images/Counter.png" alt="work role">
-                        <div class="role mobile">Back End Dev</div>
-                        <div class="role desktop">Lead Developer</div>
-                        <img class="counter" src="./images/Counter.png" alt="work role">
-                        <div class="year mobile">2015</div>
-                        <div class="year desktop">2018</div>
-                    </div>
-                </div>
-                <p class="mobile">
-                    A daily selection of privately personalized reads; no accounts or sign-ups required.
-                </p>
-                <p class="desktop">
-                    A smart assistant to make driving more safe, efficient, and fun by unlocking your
-                    most expensive computer. your car.
-                </p>
-                <ul class="tags">
-                    <li>html</li>
-                    <li class="desktop">Ruby on rails</li>
-                    <li>css</li>
-                    <li>javaScript</li>
-                </ul>
-                <button type="button" class="action">See Project</button>
-            </div>
-        </div>
+ 
     </section>
     <!-- end of works section -->
 
@@ -304,7 +179,7 @@
         </div>
     </section>
     <!-- end of contact form -->
-    <script src="./js/portfolio.js"></script>
+    <script type="module"src="./js/portfolio.js"></script>
 </body>
 
 </html>
