Save and populate form data to and from local storage

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
         </div>
     </section>
     <!-- end of contact form -->
+    <script src="./js/dataStorage.js"></script>
     <script src="./js/validate.js"></script>
     <script type="module" src="./js/portfolio.js"></script>
 </body>
