--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     a feature that you need built or a project that needs coding.
                     I’d love to help with it.
                 </p>
-                <form action="#https://formspree.io/f/xbjeloeq" method="post">
+                <form action="https://formspree.io/f/xbjeloeq" method="post">
                     <label for="username"></label>
                     <input id="username" name="username" type="text" placeholder="Your name" maxlength="30" required>
                     <label for="email"></label>
