--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <label for="message"></label>
                     <textarea name="message" id="message" placeholder="Write your message here" maxlength="500"
                         required></textarea>
-                    <input type="submit" value="Get It Touch">
+                    <input type="submit" value="Get In Touch">
                     <span class="error" aria-live="polite"></span>
                 </form>
             </div>
